--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h5 class="name">Vishvajit</h5></a>
        
     </div>
-    <div class="img-div"><a href="./index1.html">  <img  id="img-2" class="img-size" src="./priyanka.jpeg" alt="">
+    <div class="img-div"><a href="./index1.html">  <img  id="img-2" class="img-size" src="./priyanka1.jpeg" alt="">
         <h5>Priyanka</h5></a>
       
     </div>
