--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h5>Priyanka</h5></a>
       
     </div>
-    <div class="img-div"><a href="./index1.html"><img class="img-size" src="./sonam.jpeg" alt="">
+    <div class="img-div"><a href="./index1.html"><img class="img-size" src="./priyanka1.jpeg" alt="">
         <h5>Sonam</h5></a>
         
     </div>
